--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,10 @@
 name: Create Release
+
 on:
   push:
     tags:
       - "*"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,8 +18,8 @@ jobs:
           type: "zip"
           filename: "release.zip"
           exclusions: "*.git* /*node_modules/* .editorconfig"
-      - uses: ncipollo/release-action@v1.12.0
       - name: Upload Release
+        uses: ncipollo/release-action@v1.12.0
         with:
           artifacts: "release.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
