--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     permissions:
       contents: write
     steps:
@@ -18,8 +19,9 @@ jobs:
           type: "zip"
           filename: "release.zip"
           exclusions: "*.git* /*node_modules/* .editorconfig"
-      - name: Upload Release
-        uses: ncipollo/release-action@v1.12.0
+      - uses: actions/checkout@v3
+      - name: Upload Release    
+        uses: ncipollo/release-action@v1
         with:
           artifacts: "release.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
